--- a/15 - LocalStorage/style.css
+++ b/15 - LocalStorage/style.css
@@ -79,3 +79,14 @@ h2 {
   outline: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+button {
+  margin-top: 20px;
+  padding: 5px 10px;
+  border: none;
+  background: #dedede;
+}
+
+button:hover {
+  box-shadow: 0 2px rgba(255, 198, 0, .8);
+}
